force-app/main/default/objects/Cluster_registration__c/Cluster_registration__c.object-meta.xml
<CustomObject>
    <label>Cluster registration</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Cluster registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cluster registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>