force-app/main/default/objects/Cluster_registration__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cluster</label>
    <referenceTo>Cluster__c</referenceTo>
    <relationshipLabel>Cluster registrations</relationshipLabel>
    <relationshipName>Cluster_registrations</relationshipName>
    <type>Lookup</type>
</CustomField>