force-app/main/default/objects/Cluster_registration__c/fields/Cluster_Tag__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Tag__c</fullName>
    <label>Cluster Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>