force-app/main/default/objects/Cluster_registration__c/fields/cluster_UUID__c.field-meta.xml
<CustomField>
    <fullName>cluster_UUID__c</fullName>
    <label>cluster UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>