force-app/main/default/objects/Cluster_registration__c/fields/Request_Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Request_Status_Message__c</fullName>
    <label>Request Status Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>