force-app/main/default/objects/Cluster_registration__c/fields/Requested_Users__c.field-meta.xml
<CustomField>
    <fullName>Requested_Users__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested Users</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cluster_registrations</relationshipName>
    <type>Lookup</type>
</CustomField>